# genem

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
app/api/: api.py
app/api/dependencies/: auth.py
app/api/endpoints/: conversation.py  distinct.py  documents.py  exams.py  generated_questions.py  health.py  items.py  question_topics.py  questions.py  users.py
app/core/: agent.py  config.py  embeddings.py  groq_client.py  groq_token_manager.py  logging_config.py  question_generator.py
app/db/: base.py  base_class.py  session.py
app/models/: item.py  user.py
app/schemas/: alternative.py  conversation.py  document.py  exam.py  generated_question.py  item.py  question.py  question_topic.py  user.py
app/services/: base.py  conversation.py  document.py  exam.py  generated_question.py  item.py  question.py  question_topic.py  user.py
app/utils/: security.py  serializers.py
migrations/: env.py
scripts/: create-initial-data.py  docker-start.sh  init-db.sh  run-api.sh
