[tool.poetry]
name = "genem"
version = "0.1.0"
description = "Projeto FastAPI com Pydantic"
authors = ["Seu Nome <seu.email@exemplo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
google-adk = "0.4.0"
mcp-youtube-search = "^0.1.4"
litellm = "^1.67.6"
pymongo = "4.6.0"
tavily-python = "0.7.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^46.0.3"
bcrypt = ">=4.0.0"
httpx = "^0.28.1"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-groq = "^0.2.1"
langgraph = "^0.2.45"
duckduckgo-search = "^5.3.0"
groq = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.12.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 